[tool.poetry]
name = "odsgenerator"
version = "1.9.0"
description = "Generate an OpenDocument Format .ods file from json or yaml file"
license = "MIT"
keywords = ["openDocument", "ODF", "ods", "json", "spreadsheet", "generator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules"]
homepage = "https://github.com/jdum/odsgenerator"
repository = "https://github.com/jdum/odsgenerator"
authors = ["Jérôme Dumonteil <jerome.dumonteil@gmail.com>"]
readme = "README.md"
packages = [{ include = "odsgenerator" }]

[tool.poetry.scripts]
odsgenerator = "odsgenerator.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<4"
odfdo = ">=3.5"
pyyaml = ">=5.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0"
myst-parser = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
poetry = ">=1.6"
pytest = ">=7.0"
tox = "^4"
ruff = ">=0.1"
black = ">=24.0"
isort = ">=5.0"
coverage = ">=7.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py312"
line-length = 88
fix = false
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Use specific rule codes when ignoring type issues
    "PGH003",
    # check for execution of untrusted input
    "S603",
    # Class attribute `open` is shadowing a Python builtin
    "A003",
    # Use `X | Y` in `isinstance` call instead of `(X, Y)`
    "UP038",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Use ternary operator
    "SIM108",
    # Use of `assert` detected
    "S101",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["odsgenerator"]
